@@ -640,6 +640,7 @@ public class Student {
 
 
 ## 8. 反射与Properties案例
+
 ### 8.1. 案例1
 
 ```java
@@ -784,8 +785,8 @@ public class MoonZero {
 1. 动态生成代理对象，不用手动编写代理对象
 2. 不需要编写目标对象中所有同名的方法
 
+## 3. JDK 动态代理使用
 
-## 3. 动态代理使用
 ### 3.1. Proxy 类 newProxyInstance 方法
 
 ```java
@@ -802,7 +803,7 @@ public static Object newProxyInstance(ClassLoader loader, Class<?>[] interfaces,
 
 <u><font color=purple>**真实对象与代理对象的是实现了共同接口，所以返回的Object代理对象需要转成接口类型**</font></u>
 
-> 引用网络资料的解释：为什么jdk动态代理的对象必须实现一个统一的接口，其实我的理解大致是代理类本身已经extends了TimeHandler,如果传入的是父类，很可能出现这种情况：“public class $Proxy1 extends Proxy extends 传入的父类”；这个明显在java中是不允许的，Java只支持单继承，但是实现接口是完全可以的。
+> 引用网络资料的解释：为什么jdk动态代理的对象必须实现一个统一的接口，其实我的理解大致是代理类本身已经 extends 了 TimeHandler,如果传入的是父类，很可能出现这种情况：“public class $Proxy1 extends Proxy extends 传入的父类”；这个明显在 java 中是不允许的，Java 只支持单继承，但是实现接口是完全可以的。
 
 ### 3.2. InvocationHandler 接口的核心方法
 
@@ -819,7 +820,7 @@ public Object invoke(Object proxy, Method method, Object[] args);
 ```
 
 - 作用：每当通过代理对象调用方法时，都会被该方法拦截。
-- 参数`(Object proxy`：代理对象本身（不一定每次都用得到）。即方法` newProxyInstance()`方法返回的代理对象，该对象一般<font color=red>**不要在 `invoke` 方法中使用，容易出现递归调用**</font>。
+- 参数`Object proxy`：代理对象本身（不一定每次都用得到）。即方法` newProxyInstance()`方法返回的代理对象，该对象一般<font color=red>**不要在 `invoke` 方法中使用，容易出现递归调用**</font>。
 - 参数`Method method`：代理对象调用的方法，被拦截的方法，<font color=red>**真实对象的方法对象**</font>，会进行多次调用，每次调用 method 对象都不同。
 - 参数`Object[] args`：**代理对象调用方法时传递的参数，该参数会传递给真实对象的方法**。
 - 返回值Object：**一般返回真实对象方法执行后的结果**。
@@ -847,17 +848,11 @@ Class[] arr = Demo.class.getInterfaces();
 2. 然后将需要被代理的(功能)方法定义的接口中
 3. 真实对象实现接口重写方法
 4. 创建真实对象，但不通过真实对象直接调用方法
-5. 利用Proxy类创建代理对象
+5. 利用 `Proxy` 类创建代理对象
 	- 真实对象的类加载器
-	- 真实对象现实的所有接口的Class类型数组
+	- 真实对象现实的所有接口的 `Class` 类型数组
 	- 回调处理对象，拦截对代理方法调用
-6. 通过代理对象调用相关方法，方法就会被回调处理对象拦截
-    - 可以在拦截的方法中执行相关的判断。
-
-1.直接创建真实对象
-2.通过 Proxy 类，创建代理对象
-3.调用代理方法，其实是调用 InvocationHandler 接口中的 invoke() 方法
-
+6. 通过代理对象调用相关方法，方法就会被回调处理对象拦截。其实是调用 `InvocationHandler` 接口中的 `invoke()` 方法，值得注意的是，接口中每个方法的调用都会触发 `InvocationHandler.invoke` 方法，可以在拦截的方法中执行相关的判断。
 
 #### 3.4.1. Code Demo 1
 
@@ -1088,8 +1083,120 @@ public class Client {
 }
 ```
 
-### 3.5. Proxy 类 newProxyInstance 生成代理对象的实现原理（待完善）
-#### 3.5.1. InvocationHandler 接口的 invoke 方法的调用
+### 3.5. Proxy 类 newProxyInstance 生成代理对象的实现原理
+
+#### 3.5.1. 模拟 JDK 的动态代理实现示例
+
+定义一个接口
+
+```java
+public interface DemoInterface {
+    void foo();
+
+    int bar();
+}
+```
+
+定义用于测试的被代理类
+
+```java
+public class DemoTarget implements DemoInterface {
+    @Override
+    public void foo() {
+        System.out.println("被代理类 DemoTarget.foo() 方法执行了...");
+    }
+
+    @Override
+    public int bar() {
+        System.out.println("被代理类 DemoTarget.bar() 方法执行了...");
+        return 99;
+    }
+}
+```
+
+**重点：定义模拟 JDK 动态代理生成的代理类 `$Proxy0`。**。
+
+```java
+public class $Proxy0 extends Proxy implements DemoInterface {
+
+    static Method foo;
+    static Method bar;
+
+    static {
+        try {
+            // 反射获取被代理类的中方法对象
+            foo = DemoTarget.class.getMethod("foo");
+            bar = DemoTarget.class.getMethod("bar");
+        } catch (NoSuchMethodException e) {
+            e.printStackTrace();
+            throw new NoSuchMethodError(e.getMessage());
+        }
+    }
+
+    // 继承的 Proxy 类中，有一个 InvocationHandler 类型的属性，调用父类构造，给属性设值
+    public $Proxy0(InvocationHandler h) {
+        super(h);
+    }
+
+    @Override
+    public void foo() {
+        try {
+            // 方法无参数
+            h.invoke(this, foo, new Object[0]);
+        } catch (RuntimeException | Error e) {
+            throw e;
+        } catch (Throwable e) {
+            throw new UndeclaredThrowableException(e);
+        }
+    }
+
+    @Override
+    public int bar() {
+        try {
+            // 获取方法调用的返回值，并返回
+            Object result = h.invoke(this, bar, new Object[0]);
+            return (int) result;
+        } catch (RuntimeException | Error e) {
+            throw e;
+        } catch (Throwable e) {
+            throw new UndeclaredThrowableException(e);
+        }
+    }
+}
+```
+
+测试代码
+
+```java
+@Test
+public void testCustomProxy() {
+    // 创建自己实现的代理对象
+    DemoInterface demo = new $Proxy0(new InvocationHandler() {
+        @Override
+        public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+            // 模拟功能增强
+            System.out.println("代理功能增强...");
+            // 调用目标的方法，并返回
+            return method.invoke(new DemoTarget(), args);
+        }
+    });
+
+    // 调用接口的方法，由代理来实现
+    demo.foo();
+    demo.bar();
+}
+```
+
+测试运行结果
+
+```
+代理功能增强...
+被代理类 DemoTarget.foo() 方法执行了...
+代理功能增强...
+被代理类 DemoTarget.bar() 方法执行了...
+```
+
+#### 3.5.2. InvocationHandler 接口的 invoke 方法的调用
 
 `Proxy.newProxyInstance(ClassLoader loader, Class<?>[] interfaces, InvocationHandler h)`方法，会生成一个代理对象，此代理对象名称叫`$Proxy0@xxx`。此代理对象会拥有一个属性`h`，该属性就是实现了`InvocationHandler`接口的实例（编写增强逻辑的类）。接口实现`h`有一个属性，就是待增强的类的实例。
 
@@ -1101,7 +1208,7 @@ public class Client {
 
 ![](images/20200616231804543_1488.png)
 
-#### 3.5.2. newProxyInstance 方法的执行过程
+#### 3.5.3. newProxyInstance 方法的执行过程
 
 1. 首先会生成一个代理类，通过拼凑字符串的方法生成一个叫`$Proxy0`的类，以`.java`结尾
 2. 使用文件流将拼凑好的字符串生成`$Proxy0.java`文件到本地磁盘中
@@ -1110,3 +1217,390 @@ public class Client {
 5. 在内存中执行，并返回代理实例
 
 
+
+### 3.6. JDK 动态代理注意事项
+
+- JDK 的代理类是由 JDK 直接生成字节码文件，可以用 arthas 的 jad 工具反编译代理类查看源码
+- 代理类会继承 `Proxy` 类，该父类中有一个 `InvocationHandler h` 属性，通过接口回调的方式来实现代理增强的逻辑
+- 在代理实现的接口方法中，通过反射调用相应的目标方法
+- 代理增强是借助多态来实现，因此<font color=red>**成员变量、静态方法、final 方法均不能通过代理实现**</font>
+- 扩展知识：JDK 的动态代理对反射调用目标对象的方法做了优化。
+    - 前 16 次都是使用反射调用，性能较低
+    - 第 17 次调用会生成代理类，优化为非反射调用
+    - 可使用 arthas 的 jad 工具反编译第 17 次调用生成的代理类，查看源码
+    - > 注意：运行测试程序时须添加 `--add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED`
+
+## 4. CGlib 动态代理使用
+
+### 4.1. CGlib 基础使用
+
+定义接口与实现类
+
+```java
+public interface DemoInterface {
+    void foo();
+    int bar();
+}
+
+public class DemoTarget implements DemoInterface {
+    @Override
+    public void foo() {
+        System.out.println("被代理类 DemoTarget.foo() 方法执行了...");
+    }
+
+    @Override
+    public int bar() {
+        System.out.println("被代理类 DemoTarget.bar() 方法执行了...");
+        return 99;
+    }
+}
+```
+
+使用 CGlib 生成动态代理。与 JDK 的动态代理用法十分接近，主要区别有以下两点：
+
+- 增强逻辑的回调是定义在 `net.sf.cglib.proxy.MethodInterceptor` 接口中
+- 用于增强的拦截方法形参不一样，分别提供了 `Method` 方法对象与 `MethodProxy` 对象用于进行目标方法的调用
+    - `method.invoke` 是与 jdk 动态代理一样，通过反射调用，必须调用到足够次数才会进行优化
+    - `methodProxy.invoke` 不通过反射调用，它会正常（间接）调用目标对象的方法（Spring 框架底层采用）
+    - `methodProxy.invokeSuper` 也是不通过反射调用，它会正常（间接）调用代理对象的方法，可以省略目标对象
+
+```java
+@Test
+public void testCglibBasic() {
+    // 创建被代理对象
+    DemoTarget demoTarget = new DemoTarget();
+
+    // 创建代理
+    DemoInterface demoInterface = (DemoInterface) Enhancer.create(DemoTarget.class, new MethodInterceptor() {
+
+        @Override
+        public Object intercept(Object proxy, Method method, Object[] args, MethodProxy methodProxy) throws Throwable {
+            // 模拟增强逻辑
+            System.out.println("CGlib 动态代理的 MethodProxy signature: " + methodProxy.getSignature());
+            // 使用反射，调用原始目标方法
+            // return method.invoke(demoTarget, args);
+            // 内部没有用反射, 需要目标对象，spring 框架采用这种方式
+            return methodProxy.invoke(demoTarget, args);
+            // 内部没有用反射, 需要代理对象
+            // return methodProxy.invokeSuper(proxy, args);
+        }
+    });
+
+    demoInterface.foo();
+    demoInterface.bar();
+}
+```
+
+> 注意事项：通过 `MethodProxy` 调用目标方法，在 jdk >= 9 的情况下，在调用 `Object` 的方法会有问题，启动程序时需要设置：`--add-opens java.base/java.lang=ALL-UNNAMED`
+
+### 4.2. 模拟 CGlib 代理基础实现
+
+定义用于测试的被代理类
+
+```java
+public class Target {
+
+    public void save() {
+        System.out.println("被代理类 Target.save() 方法执行...");
+    }
+
+    public void save(int i) {
+        System.out.println("被代理类 Target.save(int) 方法执行，参数：" + i);
+    }
+
+    public void save(long j) {
+        System.out.println("被代理类 Target.save(long) 方法执行，参数：" + j);
+    }
+}
+```
+
+CGlib 动态代理是继承被代理类
+
+```java
+// CGlib 代理是继承被代理类
+public class CglibProxyMock extends Target {
+
+    // 定义用于增强的回调接口的属性
+    private MethodInterceptor methodInterceptor;
+
+    // 通过构造函数或者 setter 方法来接收 MethodInterceptor 回调接口
+    public CglibProxyMock(MethodInterceptor methodInterceptor) {
+        this.methodInterceptor = methodInterceptor;
+    }
+
+    // 定义方法反射调用的 Method 属性
+    static Method save0;
+    static Method save1;
+    static Method save2;
+    // 定义不使用反射调用的 MethodProxy 属性
+    static MethodProxy save0Proxy;
+    static MethodProxy save1Proxy;
+    static MethodProxy save2Proxy;
+
+    static {
+        try {
+            save0 = Target.class.getMethod("save");
+            save1 = Target.class.getMethod("save", int.class);
+            save2 = Target.class.getMethod("save", long.class);
+            /*
+             * 创建 MethodProxy 对象
+             *  参数1：被代理类字节码对象
+             *  参数2：代理类字节码对象
+             *  参数3：代理方法的返回值与形参的表达式
+             *  参数4：增强后的方法名称
+             *  参数5：原始方法的名称
+             */
+            save0Proxy = MethodProxy.create(Target.class, CglibProxyMock.class, "()V", "save", "saveSuper");
+            save1Proxy = MethodProxy.create(Target.class, CglibProxyMock.class, "(I)V", "save", "saveSuper");
+            save2Proxy = MethodProxy.create(Target.class, CglibProxyMock.class, "(J)V", "save", "saveSuper");
+        } catch (NoSuchMethodException e) {
+            throw new NoSuchMethodError(e.getMessage());
+        }
+    }
+
+    // ***** 带原始功能的方法，直接调用父类方法 *****
+    public void saveSuper() {
+        super.save();
+    }
+
+    public void saveSuper(int i) {
+        super.save(i);
+    }
+
+    public void saveSuper(long j) {
+        super.save(j);
+    }
+
+    // ***** 带增强功能的方法，通过 MethodInterceptor.intercept 回调方法执行功能增强 *****
+    @Override
+    public void save() {
+        try {
+            methodInterceptor.intercept(this, save0, new Object[0], save0Proxy);
+        } catch (Throwable e) {
+            throw new UndeclaredThrowableException(e);
+        }
+    }
+
+    @Override
+    public void save(int i) {
+        try {
+            methodInterceptor.intercept(this, save1, new Object[]{i}, save1Proxy);
+        } catch (Throwable e) {
+            throw new UndeclaredThrowableException(e);
+        }
+    }
+
+    @Override
+    public void save(long j) {
+        try {
+            methodInterceptor.intercept(this, save2, new Object[]{j}, save2Proxy);
+        } catch (Throwable e) {
+            throw new UndeclaredThrowableException(e);
+        }
+    }
+}
+```
+
+### 4.3. MethodProxy 的实现原理
+
+上面提及 `MethodProxy` 类可以避免反射调用目标方法，原理是当调用 `MethodProxy` 的 `invoke` 或 `invokeSuper` 方法时，会动态生成两个类，都会继承 `net.sf.cglib.reflect.FastClass` 抽象类
+
+- 其中一个类是配合代理对象一起使用，避免反射
+- 另外一个类是配合目标对象一起使用，避免反射 (Spring 框架底层使用此方式)
+
+#### 4.3.1. 配合目标对象的 FastClass 实现
+
+当第一次在 `MethodInterceptor` 实现中调用 `methodProxy.invoke(target, args)` 方法，cglib 就动态生成一个类，继承 `net.sf.cglib.reflect.FastClass` 抽象类。在初始创建时就记录了被代理的目标对象中方法与编号的对应关系，其中 `getIndex` 方法用于获取调用的方法的编号，`invoke` 方法则用于根据方法编号通过被代理的目标对象调用相应的方法
+
+模拟实现如下：
+
+```java
+/**
+ * 模拟 MethodProxy 为避免反射调用目标方法时生成的 FastClass 实现类。
+ * 即 methodProxy.invoke(target, args) 方法的实现原理，配置目标对象使用。
+ * 注：只抽取两个比较重点的方法实现做测试
+ */
+class TargetFastClass extends FastClass {
+    // FastClass 要求必须要调用其有参构造方法
+    public TargetFastClass(Class clazz) {
+        super(clazz);
+    }
+
+    // 初始化方法相应的签名对象
+    Signature s0 = new Signature("save", "()V");
+    Signature s1 = new Signature("save", "(I)V");
+    Signature s2 = new Signature("save", "(J)V");
+
+    /**
+     * 获取目标方法的编号
+     *
+     * @param signature 被调用的方法签名，包括方法名字、参数返回值
+     * @return
+     */
+    @Override
+    public int getIndex(Signature signature) {
+        /*
+            判断方法签名，返回相应的方法编号。示例假设方法编号如下：
+                save()      0
+                save(int)   1
+                save(long)  2
+        */
+        if (s0.equals(signature)) {
+            return 0;
+        } else if (s1.equals(signature)) {
+            return 1;
+        } else if (s2.equals(signature)) {
+            return 2;
+        }
+        return -1;
+    }
+
+    /**
+     * 根据方法的编号，正常调用目标对象中的方法
+     *
+     * @param index  方法的编号
+     * @param target 目标对象
+     * @param args   被调用的方法的形参
+     * @return
+     * @throws InvocationTargetException
+     */
+    @Override
+    public Object invoke(int index, Object target, Object[] args) throws InvocationTargetException {
+        // 根据方法编号，调用相应的对象中的方法
+        if (index == 0) {
+            ((Target) target).save();
+            return null;
+        } else if (index == 1) {
+            ((Target) target).save((int) args[0]);
+            return null;
+        } else if (index == 2) {
+            ((Target) target).save((long) args[0]);
+            return null;
+        } else {
+            throw new RuntimeException("无此方法");
+        }
+    }
+    // ...省略其他实现方法
+}
+```
+
+模拟测试 `methodProxy.invoke(target, args)` 方法，配合目标对象进行方法的调用实现流程
+
+```java
+@Test
+public void testTargetFastClass() throws InvocationTargetException {
+    // MethodProxy.create 方法调用时，就相当于创建了 FastClass 实现类，创建过程就会记录了方法签名信息
+    TargetFastClass fastClass = new TargetFastClass(Target.class);
+    // 调用时，根据方法签名获取方法的编号
+    int index = fastClass.getIndex(new Signature("save", "(I)V"));
+    System.out.println(index);
+    // 根据方法编号，调用相应目标的方法
+    fastClass.invoke(index, new Target(), new Object[]{100});
+}
+```
+
+> 注：`Target` 是前面定义的用来测试的被代理类
+
+#### 4.3.2. 配合代理对象的 FastClass 实现
+
+当第一次在 `MethodInterceptor` 实现中调用 `methodProxy.invokeSuper(proxy, args)` 方法，cglib 就动态生成一个类，继承 `net.sf.cglib.reflect.FastClass` 抽象类。在初始创建时就记录了cglib 的代理对象中调用原目标方法与编号的对应关系，其中 `getIndex` 方法用于获取调用的方法的编号，`invoke` 方法则用于根据方法编号通过代理对象调用相应原目标的方法
+
+模拟实现如下：
+
+```java
+/**
+ * 模拟 MethodProxy 为避免反射调用目标方法时生成的 FastClass 实现类。
+ * 即 methodProxy.invokeSuper(proxy, args) 方法的实现原理，配置 cglib 代理对象使用。
+ * 注：只抽取两个比较重点的方法实现做测试
+ */
+class ProxyFastClass extends FastClass {
+    // FastClass 要求必须要调用其有参构造方法
+    public ProxyFastClass(Class clazz) {
+        super(clazz);
+    }
+
+    // 初始化代理中方法相应的签名对象
+    Signature s0 = new Signature("saveSuper", "()V");
+    Signature s1 = new Signature("saveSuper", "(I)V");
+    Signature s2 = new Signature("saveSuper", "(J)V");
+
+    /**
+     * 获取代理中目标方法的编号
+     *
+     * @param signature 被调用的方法签名，包括方法名字、参数返回值
+     * @return
+     */
+    @Override
+    public int getIndex(Signature signature) {
+        /*
+            判断方法签名，返回相应的方法编号。示例假设代理中调用原目标方法编号如下：
+                saveSuper()      0
+                saveSuper(int)   1
+                saveSuper(long)  2
+        */
+        if (s0.equals(signature)) {
+            return 0;
+        } else if (s1.equals(signature)) {
+            return 1;
+        } else if (s2.equals(signature)) {
+            return 2;
+        }
+        return -1;
+    }
+
+    /**
+     * 根据方法的编号，调用代理类中定义的目标对象方法
+     *
+     * @param index 方法的编号
+     * @param proxy 代理对象
+     * @param args  被调用的方法的形参
+     * @return
+     * @throws InvocationTargetException
+     */
+    @Override
+    public Object invoke(int index, Object proxy, Object[] args) throws InvocationTargetException {
+        // 根据方法编号，调用代理对象中的相应方法
+        if (index == 0) {
+            ((CglibProxyMock) proxy).saveSuper();
+            return null;
+        } else if (index == 1) {
+            ((CglibProxyMock) proxy).saveSuper((int) args[0]);
+            return null;
+        } else if (index == 2) {
+            ((CglibProxyMock) proxy).saveSuper((long) args[0]);
+            return null;
+        } else {
+            throw new RuntimeException("无此方法");
+        }
+    }
+    // ...省略其他实现方法
+}
+```
+
+模拟测试 `methodProxy.invokeSuper(proxy, args)` 方法，配合代理对象进行方法的调用实现流程
+
+```java
+@Test
+public void testProxyFastClass() throws InvocationTargetException {
+    // MethodProxy.create 方法调用时，就相当于创建了 FastClass 实现类，创建过程就会记录了方法签名信息
+    ProxyFastClass fastClass = new ProxyFastClass(Target.class);
+    // 调用时，根据方法签名获取方法的编号
+    int index = fastClass.getIndex(new Signature("saveSuper", "(I)V"));
+    System.out.println(index);
+    // 根据方法编号，调用相应目标的方法
+    fastClass.invoke(index, new CglibProxyMock((obj, method, args, proxy) -> proxy.invokeSuper(obj, args)), new Object[]{100});
+}
+```
+
+> 注：
+>
+> - <u>*此测试使用 `CglibProxyMock` 是前面自定义的模拟 cglib 代理实现，非 cglib 原生*</u>
+> - 上面模拟使用代理对象调用原被代理目标的方法，记得要调用自定义代理中的非增强的方法。**如果调用增强的方法，该方法中又会回调 `MethodInterceptor` 的 `intercept` 方法，就会出现无限的循环调用**
+
+### 4.4. CGlib 与 JDK 动态代理的区别
+
+JDK 的动态代理，当方法被调用到一定的次数后，才会生成不通过反射调用的代理
+
+而 CGlib 在加载时动态生成两个类，分别是使用目标对象与代理对象来调用原方法，从而避免反射，提高性能。但代价是一个代理类会搭配生成两个 `FastClass` 实现类，代理类中还得增加仅调用原目标对象的 `super` 的相关方法。
+
+使用编号处理方法对应关系比较省内存，另外，最初获得方法顺序是不确定的。这个过程没法固定死
